--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "checks-and-balances",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://espindolaa.github.io/points-and-balances",
+  "homepage": "http://espindolaa.github.io/points-and-balance",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
